--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ node_js:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq --yes python3 php5-curl php5-cli
+
+before_script:
+  - ./node_modules/.bin/lerna bootstrap
