fixup! chore(ci) add gh actions

--- a/packages/@httpsnippet/curl/package.json
+++ b/packages/@httpsnippet/curl/package.json
@@ -4,6 +4,6 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "../../../node_modules/.bin/mocha --recursive *.spec.js"
+    "test": "mocha --recursive *.spec.js"
   }
 }
