--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        lerna bootstrap
+        $(npm bin)/lerna bootstrap
         npm run build --if-present
         npm test
       env:
